# new_manipulator

./: README.md
gazebo_ros2_control/src/: gazebo_system.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/gazebo_ros2_control/share/gazebo_ros2_control/: package.bash  package.zsh
install/joystick_cartesian_control/lib/joystick_cartesian_control/: continuous_cartesian_node  joystick_cartesian_node
install/joystick_cartesian_control/share/joystick_cartesian_control/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joystick_cartesian_control/share/joystick_cartesian_control/cmake/: joystick_cartesian_controlConfig.cmake
install/joystick_cartesian_control/share/joystick_cartesian_control/launch/: joystick_control.launch.py
install/new_manipulator_hardware/lib/new_manipulator_hardware/: mode_switcher.py
install/new_manipulator_hardware/share/ament_index/resource_index/hardware_interface__pluginlib__plugin/: new_manipulator_hardware
install/new_manipulator_hardware/share/new_manipulator_hardware/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/new_manipulator_hardware/share/new_manipulator_hardware/cmake/: ament_cmake_export_libraries-extras.cmake  new_manipulator_hardwareConfig.cmake
joystick_cartesian_control/: CMakeLists.txt  package.xml
joystick_cartesian_control/src/: continuous_cartesian_controller.cpp  joystick_cartesian_controller.cpp
log/: latest_build
new_manipulator/: CMakeLists.txt  package.xml
new_manipulator/config/: config.rviz  controller_manager.yaml  controllers.yaml  my_controllers.yaml
new_manipulator/launch/: display.launch.py  gazebo.launch.py  unified_launch.py
new_manipulator/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  link_8.STL  link_9.STL
new_manipulator/src/: mode_switcher.py
new_manipulator/urdf/: model.urdf  robot.urdf.xacro  ros2_control.xacro
new_manipulator/worlds/: custom.world
new_manipulator_hardware/: CMakeLists.txt  new_manipulator_hardware.xml
new_manipulator_hardware/hardware/: microros_hardware.cpp
new_manipulator_hardware/hardware/include/new_manipulator_hardware/: microros_hardware.hpp
new_manipulator_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
new_manipulator_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  model.urdf  moveit_controllers.yaml  new_manipulator.ros2_control.xacro  new_manipulator.srdf  new_manipulator.urdf.xacro  new_manipulator_simulated_config.yaml  ompl_planning.yaml  ros2_controllers.yaml  rviz.rviz  stomp_planning.yaml
new_manipulator_moveit_config/launch/: demo.launch.py  joystick_teleop.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  test.launch.py  test_debug.launch.py  warehouse_db.launch.py
new_manipulator_moveit_config/scripts/: joystick_cartesian_teleop.py
new_manipulator_moveit_config/src/: cartesian_path_planner.cpp  collision_object_publisher.py  joystick_cartesian_teleop.cpp  move_to_xyzrpy.py
new_manipulator_servo/: CMakeLists.txt  package.xml
new_manipulator_servo/config/: demo_rviz_config_my_robot.rviz  new_manipulator_simulated_config.yaml  new_manipulator_simulated_config_pose_tracking.yaml  simple_servo_config.rviz
new_manipulator_servo/include/moveit_servo/: servo_parameters.h
new_manipulator_servo/launch/: servo_example.launch.py
new_manipulator_servo/src/: servo_calcs.cpp  servo_command_filer.cpp  servo_node_main.cpp
new_manipulator_servo/src/teleop_demo/: joystick_servo_example.cpp  joystick_servo_node_main.cpp  keyboard_servo_example.cpp  simple_keyboard.cpp
new_manipulator_servo/test/: servo_calcs_unit_tests.cpp
new_manipulator_servo/test/config/: servo_settings.yaml
new_manipulator_servo/test/launch/: servo_launch_test_common.py  test_servo_pose_tracking.test.py
