cmake_minimum_required(VERSION 3.8)
project(joystick_cartesian_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# Find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(moveit_ros_planning_interface REQUIRED)
find_package(moveit_core REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)

# Joystick Cartesian Controller
add_executable(joystick_cartesian_node src/joystick_cartesian_controller.cpp)
target_include_directories(joystick_cartesian_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(joystick_cartesian_node PUBLIC c_std_99 cxx_std_17)
ament_target_dependencies(joystick_cartesian_node
  rclcpp
  moveit_ros_planning_interface
  moveit_core
  geometry_msgs
  sensor_msgs
  tf2
  tf2_geometry_msgs
)

# Continuous Cartesian Controller
add_executable(continuous_cartesian_node src/continuous_cartesian_controller.cpp)
target_include_directories(continuous_cartesian_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>)
target_compile_features(continuous_cartesian_node PUBLIC c_std_99 cxx_std_17)
ament_target_dependencies(continuous_cartesian_node
  rclcpp
  moveit_ros_planning_interface
  moveit_core
  geometry_msgs
  sensor_msgs
  tf2
  tf2_geometry_msgs
)

# Install executables
install(TARGETS 
  joystick_cartesian_node
  continuous_cartesian_node
  DESTINATION lib/${PROJECT_NAME})

# Install launch files
install(DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}/)

ament_package()
