<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>new_manipulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="devika@todo.todo">devika</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>linkattacher_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>action_msgs</depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend> 
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>
  
    <export>
    <gazebo_ros gazebo_model_path="${prefix}/.."/>
    <gazebo_ros gazebo_plugin_path="lib"/>

    <build_type>ament_cmake</build_type>
  </export>
  
</package>
